[FEAT] 목표 사용률 구현